# v

./: COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  libvcoinconsensus.pc  libvcoinconsensus.pc.in
autom4te.cache/: output.0  requests  traces.0  traces.1
build-aux/m4/: bitcoin_find_bdb48.m4  bitcoin_qt.m4  bitcoin_subdir_to_include.m4
contrib/devtools/: symbol-check.py
contrib/macdeploy/: DS_Store  detached-sig-create.sh  fancy.plist  macdeployqtplus
doc/: README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  unit-tests.md  zmq.md
qa/rpc-tests/: README.md  (+49 more)
share/: setup.nsi  setup.nsi.in
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-tx-res.rc  bitcoind-res.rc  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  (+87 more)
src/bench/: Examples.cpp  bench.cpp  bench.h  bench_vcoin.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: stamp-h1  vcoin-config.h  vcoin-config.h.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  (+65 more)
src/qt/forms/: addressbookpage.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: vcoin_af.ts  vcoin_af_ZA.ts  vcoin_ar.ts  vcoin_be_BY.ts  vcoin_bg.ts  vcoin_bg_BG.ts  vcoin_bs.ts  vcoin_ca.ts  vcoin_ca@valencia.ts  vcoin_ca_ES.ts  vcoin_cs.ts  vcoin_cs_CZ.ts  vcoin_cy.ts  vcoin_da.ts  vcoin_de.ts  vcoin_el.ts  vcoin_el_GR.ts  vcoin_en.ts  vcoin_en_GB.ts  vcoin_eo.ts  vcoin_es.ts  vcoin_es_AR.ts  vcoin_es_CL.ts  vcoin_es_CO.ts  vcoin_es_DO.ts  vcoin_es_ES.ts  vcoin_es_MX.ts  vcoin_es_UY.ts  vcoin_es_VE.ts  vcoin_et.ts  vcoin_eu_ES.ts  vcoin_fa.ts  vcoin_fa_IR.ts  vcoin_fi.ts  vcoin_fr.ts  vcoin_fr_CA.ts  vcoin_fr_FR.ts  vcoin_gl.ts  vcoin_he.ts  vcoin_hi_IN.ts  (+43 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  vcoinconsensus.cpp  vcoinconsensus.h
src/secp256k1/: Makefile  Makefile.am  Makefile.in  config.status  libsecp256k1.pc  libsecp256k1.pc.in  libtool
src/secp256k1/autom4te.cache/: requests  traces.0
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_bitcoin_NativeSecp256k1.h
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bitcoin-util-test.py  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum10.h  (+15 more)
src/test/data/: bitcoin-util-test.json
src/univalue/: Makefile  config.status  libtool
src/univalue/autom4te.cache/: requests
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/univalue/lib/.deps/: libunivalue_la-univalue_read.Plo
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/wallet/test/.deps/: test_test_vcoin-wallet_tests.Po
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+67 files in other folders)
